[gd_scene load_steps=56 format=3 uid="uid://dwf2gxwcb527t"]

[ext_resource type="Script" path="res://scrips/Player.gd" id="1_umpvc"]
[ext_resource type="Texture2D" uid="uid://dlsaorkw313mb" path="res://Carácteres/Capibara/Morir/dieGranjero1.png" id="2_rf5tg"]
[ext_resource type="Texture2D" uid="uid://crrmtkgu4w2tj" path="res://Carácteres/Capibara/Morir/dieGranjero2.png" id="3_ml12b"]
[ext_resource type="Texture2D" uid="uid://bvxudy15oak10" path="res://Carácteres/Capibara/Morir/dieGranjero3.png" id="4_v1aun"]
[ext_resource type="Texture2D" uid="uid://d38bxwytypmvt" path="res://Carácteres/Capibara/Morir/dieGranjero4.png" id="5_8shy2"]
[ext_resource type="Texture2D" uid="uid://c04ur5yo0yylp" path="res://Carácteres/Capibara/Morir/dieGranjero5.png" id="6_txb7e"]
[ext_resource type="Texture2D" uid="uid://b5td2frjsne45" path="res://Carácteres/Capibara/Morir/dieGranjero6.png" id="7_xagmv"]
[ext_resource type="Texture2D" uid="uid://b71wv22dc0ckd" path="res://Carácteres/Capibara/Morir/dieGranjero7.png" id="8_207fx"]
[ext_resource type="Texture2D" uid="uid://bly1hsav6xpwc" path="res://Carácteres/Capibara/Morir/dieGranjero8.png" id="9_g3054"]
[ext_resource type="Texture2D" uid="uid://d07ray1kvrwcv" path="res://Carácteres/Capibara/Morir/dieGranjero9.png" id="10_nld0t"]
[ext_resource type="Texture2D" uid="uid://byhnqb1ig1jlb" path="res://Carácteres/Capibara/Victoria/Wins1.png" id="11_yk7hn"]
[ext_resource type="Texture2D" uid="uid://bomr0e8ukawi" path="res://Carácteres/Capibara/Victoria/Wins2.png" id="12_qcyrx"]
[ext_resource type="Texture2D" uid="uid://svcy3rxnj6ec" path="res://Carácteres/Capibara/Victoria/Wins3.png" id="13_mobei"]
[ext_resource type="Texture2D" uid="uid://dbukp5y5hx4qg" path="res://Carácteres/Capibara/Victoria/Wins4.png" id="14_wqeq7"]
[ext_resource type="Texture2D" uid="uid://bbo4svfwj0iu2" path="res://Carácteres/Capibara/Victoria/Wins5.png" id="15_xiq0b"]
[ext_resource type="Texture2D" uid="uid://nbba5fy85bdy" path="res://Carácteres/Capibara/Victoria/Wins6.png" id="16_5tx14"]
[ext_resource type="Texture2D" uid="uid://dyoechyytg7xj" path="res://Carácteres/Capibara/Victoria/Wins7.png" id="17_5jaxv"]
[ext_resource type="Texture2D" uid="uid://dd48tpwyckg1u" path="res://Carácteres/Capibara/Victoria/Wins8.png" id="18_0xsex"]
[ext_resource type="Texture2D" uid="uid://ln2b6brmcpso" path="res://Carácteres/Capibara/Caminar Plataforma/walkrightcapibaraGranjero.png" id="19_dkxnc"]
[ext_resource type="Texture2D" uid="uid://dhqj4fn7j0lei" path="res://Carácteres/Capibara/Idle/IdleMedioLadoGranjeroCapibara2.png" id="20_dgw44"]
[ext_resource type="Texture2D" uid="uid://8qs6o6erx2up" path="res://Carácteres/Capibara/Atacar/atackrightcapibara2.png" id="21_6mspw"]
[ext_resource type="Texture2D" uid="uid://b2ky1oherah4q" path="res://Carácteres/Capibara/Atacar/atackrightcapibara1.png" id="22_ui0we"]
[ext_resource type="Texture2D" uid="uid://d5r6380dsmb3" path="res://Carácteres/Capibara/Atacar/atackrightcapibara3.png" id="23_dsckp"]
[ext_resource type="Texture2D" uid="uid://dufagyo4v8rwd" path="res://Carácteres/Capibara/Atacar/atackrightcapibara4.png" id="24_bi5c7"]
[ext_resource type="Texture2D" uid="uid://o1dn840gvwp" path="res://Carácteres/Capibara/Atacar/atackrightcapibara5.png" id="25_dp6td"]
[ext_resource type="Texture2D" uid="uid://dnau6d4t5rcfx" path="res://Carácteres/Capibara/Saltar/jumprightcapibara1.png" id="26_lbo3n"]
[ext_resource type="Texture2D" uid="uid://cq2qg8ll3mewr" path="res://Carácteres/Capibara/Saltar/jumprightcapibara2.png" id="27_8pjj2"]
[ext_resource type="Texture2D" uid="uid://ek43i747lqwt" path="res://Carácteres/Capibara/Saltar/jumprightcapibara3.png" id="28_vyrgx"]
[ext_resource type="Texture2D" uid="uid://bakd58rv3spig" path="res://Carácteres/Capibara/Saltar/jumprightcapibara4.png" id="29_cyeho"]
[ext_resource type="Texture2D" uid="uid://ptvlvulu7taj" path="res://Carácteres/Capibara/Saltar/jumprightcapibara5.png" id="30_joq4f"]
[ext_resource type="Texture2D" uid="uid://8vtnbh44qce4" path="res://Carácteres/Capibara/Saltar/jumprightcapibara6.png" id="31_4gkds"]
[ext_resource type="AudioStream" uid="uid://cfubsp87je1ln" path="res://Sonidos/Auch/Auch Sound Effect (Cockney Wideboy).mp3" id="32_sdglc"]
[ext_resource type="AudioStream" uid="uid://dn6xorvn6fqb5" path="res://Sonidos/Recolectar/sound1.wav" id="33_btb4y"]
[ext_resource type="AudioStream" uid="uid://5bcqr0c5swyo" path="res://Sonidos/salto/saltoretro.mp3" id="34_dy8to"]
[ext_resource type="AudioStream" uid="uid://cscsgv8d87ts7" path="res://Sonidos/Espada/Katana Swing Cut - Sound Effect for editing.mp3" id="35_3kpx4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cva8x"]
atlas = ExtResource("2_rf5tg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkqq0"]
atlas = ExtResource("11_yk7hn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnh68"]
atlas = ExtResource("19_dkxnc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibf5j"]
atlas = ExtResource("19_dkxnc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bju3p"]
atlas = ExtResource("19_dkxnc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cf7t"]
atlas = ExtResource("19_dkxnc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64w4x"]
atlas = ExtResource("20_dgw44")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scxju"]
atlas = ExtResource("20_dgw44")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dkxl"]
atlas = ExtResource("20_dgw44")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knhcw"]
atlas = ExtResource("20_dgw44")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_15ku3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cva8x")
}, {
"duration": 1.0,
"texture": ExtResource("3_ml12b")
}, {
"duration": 1.0,
"texture": ExtResource("4_v1aun")
}, {
"duration": 1.0,
"texture": ExtResource("5_8shy2")
}, {
"duration": 1.0,
"texture": ExtResource("6_txb7e")
}, {
"duration": 1.0,
"texture": ExtResource("7_xagmv")
}, {
"duration": 1.0,
"texture": ExtResource("8_207fx")
}, {
"duration": 1.0,
"texture": ExtResource("9_g3054")
}, {
"duration": 1.0,
"texture": ExtResource("10_nld0t")
}],
"loop": false,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkqq0")
}, {
"duration": 1.0,
"texture": ExtResource("12_qcyrx")
}, {
"duration": 1.0,
"texture": ExtResource("13_mobei")
}, {
"duration": 1.0,
"texture": ExtResource("14_wqeq7")
}, {
"duration": 1.0,
"texture": ExtResource("15_xiq0b")
}, {
"duration": 1.0,
"texture": ExtResource("16_5tx14")
}, {
"duration": 1.0,
"texture": ExtResource("17_5jaxv")
}, {
"duration": 1.0,
"texture": ExtResource("18_0xsex")
}],
"loop": true,
"name": &"WIN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnh68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibf5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bju3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cf7t")
}],
"loop": true,
"name": &"caminar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64w4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scxju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dkxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knhcw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dslrw"]
size = Vector2(17, 27)

[sub_resource type="Animation" id="Animation_vd2rt"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("22_ui0we"), ExtResource("21_6mspw"), ExtResource("23_dsckp"), ExtResource("24_bi5c7"), ExtResource("25_dp6td")]
}

[sub_resource type="Animation" id="Animation_n6fd1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_6mspw")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hdhbn"]
_data = {
"Attack": SubResource("Animation_vd2rt"),
"RESET": SubResource("Animation_n6fd1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy2ov"]
size = Vector2(27.4608, 15.2216)

[sub_resource type="Animation" id="Animation_iyo8a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("26_lbo3n")]
}

[sub_resource type="Animation" id="Animation_2gqfb"]
resource_name = "saltar"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("26_lbo3n"), ExtResource("27_8pjj2"), ExtResource("28_vyrgx"), ExtResource("29_cyeho"), ExtResource("30_joq4f"), ExtResource("31_4gkds")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ge7b"]
_data = {
"RESET": SubResource("Animation_iyo8a"),
"saltar": SubResource("Animation_2gqfb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6boef"]
radius = 11.0

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_umpvc")

[node name="CapibaraAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 3
texture_filter = 1
position = Vector2(1.12504, -0.499999)
scale = Vector2(1.17968, 1.15625)
sprite_frames = SubResource("SpriteFrames_15ku3")
animation = &"WIN"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_dslrw")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, 0)
scale = Vector2(1.23644, 1.15328)
texture = ExtResource("21_6mspw")

[node name="AtacarAnimacion" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hdhbn")
}

[node name="Ata" type="Area2D" parent="." groups=["atac"]]
position = Vector2(1, 4.21772)
scale = Vector2(1.13046, 1.05443)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ata"]
light_mask = 3
visibility_layer = 3
position = Vector2(21.2303, 0.741895)
shape = SubResource("RectangleShape2D_wy2ov")
disabled = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.5, -3.5)
scale = Vector2(1.09375, 1.09375)
texture = ExtResource("26_lbo3n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D2"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_4ge7b")
}

[node name="Recolectar" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Recolectar"]
shape = SubResource("CapsuleShape2D_6boef")

[node name="Auch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_sdglc")

[node name="Recolectar2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_btb4y")

[node name="Saltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_dy8to")

[node name="Atacar" type="AudioStreamPlayer" parent="."]
stream = ExtResource("35_3kpx4")

[node name="Caminar" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AtacarAnimacion" to="." method="_on_atacar_animacion_animation_finished"]
[connection signal="body_entered" from="Ata" to="." method="_on_ata_body_entered"]
[connection signal="animation_finished" from="Sprite2D2/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Recolectar" to="." method="_on_recolectar_area_entered"]
